--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.1"
+    "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^4.0.1"
   }
 }
