--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0"
+    "stylelint-config-recommended": "^5.0.0",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
