--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "development-gulp-template",
+  "name": "frontend-development-template",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "This is frontend development template.",
+  "main": ".eslintrc.js",
   "scripts": {
-    "dev": "npx gulp",
-    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src",
-    "lint:css": "stylelint **/*.{css,scss,sass}"
+    "dev": "npx gulp"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YutoUrushima/development-gulp-template.git"
+    "url": "git@github-sub:YutoUrushima/frontend-development-template.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/YutoUrushima/development-gulp-template/issues"
-  },
-  "homepage": "https://github.com/YutoUrushima/development-gulp-template#readme",
-  "devDependencies": {
-    "browser-sync": "^2.26.14",
-    "eslint": "^7.32.0",
+  "dependencies": {
+    "browser-sync": "^2.27.10",
     "gulp": "^4.0.2",
     "gulp-concat-css": "^3.1.0",
-    "gulp-notify": "^3.2.0",
+    "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-pug": "^4.0.1",
-    "gulp-sass": "^4.1.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "gulp-pug": "^5.0.0",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.54.4"
   }
 }
